# Python-DDD-Infrastructure

./: .gitignore  README.md  pyproject.toml
src/ddd/application/: command.py  command_handler.py
src/ddd/domain/: aggregate_root.py  entity.py  value_object.py
src/ddd/domain/value/: identity.py
src/ddd/framework/: mutability.py  service.py
tests/unit/ddd/domain/: test_aggregate_root.py  test_entity.py  test_value_object.py
tests/unit/ddd/framework/: test_encapsulated.py  test_immutable.py
tests/unit/domain/: test_aggregate_root.py  test_entity.py  test_value_object.py
