[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddd"
version = "0.1.0"
description = "Domain-Driven Design Infrastructure Layer"
authors = [
  { name = "Ariana Maghsoudi", email = "ariana.maghsoudi82@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "assertpy"]
